--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
- body{
-    background-color:darkgrey;
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+body{
+    background-color: silver;
 }
 
 .bg-red{
     color: red;
 }
+
 .bg-green{
     color: green;
 }
@@ -16,7 +23,7 @@
     border: 5px dashed #fff ;
     font-size: 3rem;
     padding: 30px;
-    
+    margin-bottom: 30px;
 }
 
 .all-cards{
@@ -24,27 +31,39 @@
     justify-content: center;
     flex-wrap: wrap;
     gap: 10px;
+    margin: 30px 0px;
 }
 
 .alone-card{
-    
     border: 3px solid black;
     text-align: center;
     padding: 20px;
     margin: 5px;
-    width: 40%;
-    
+    width: 45%;
+}
+
+@media (max-width: 780px) {
+    .alone-card{
+        width: 100%;
+    }
 }
 
 .result-card{
-
     display: flex;
+    flex-wrap: nowrap;
+    padding: 15px;
     gap: 50px;
     align-items: center;
-    background-color:rgb(160, 179, 194);
+    background-color:rgb(202, 209, 215);
     box-shadow: 4px 4px 12px #000;
-    border-radius: 10px;    
-    
+    border-radius: 10px;
+}
+
+@media (max-width: 780px) {
+    .result-card{
+        flex-wrap: wrap;
+        margin-bottom: 50px;
+    }
 }
 
 .seeMore{
@@ -59,20 +78,19 @@
 }
 
 .order-btn{
-
-    background-color: rgb(62, 28, 255);
+    background-color: rgb(100, 82, 206);
     margin: 5px 20px 20px 0px;
     border: 2px dotted black;
     border-radius: 10px;
     padding: 13px;
     font-size: 1.1rem;
     cursor: pointer;
-
 }
 
 .anchor{
     text-align: center;
     margin: 3% 0px;
+    margin-bottom: 30px;
 }
 
 a{
@@ -83,5 +101,9 @@ a{
 
 #b-bottom{
     border-bottom: 2px solid white;
+    margin: 10px 0px;
 }
 
+.space{
+    padding: 5px 0px;
+}
